k8s/postgres-liveness.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-liveness
  namespace: database
  labels:
    name: postgres
spec:
  containers:
  - name: postgres
    image: postgres
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 5432
    livenessProbe:
      exec:
        command:
          - pg_isready 
          - -h localhost 
          - -d postgres
      initialDelaySeconds: 10
      periodSeconds: 5
